2012-03-05  Fred Kiefer <FredKiefer@gmx.de>

	* Tests/base/NSXMLElement/attributes.m: Test for changed
	exception.
	* Tests/base/NSXMLNode/basic.m: More tests.
	* Source/NSXMLNode.m: Rewrite object value handling.
	* Source/NSXMLElement.m (-objectValue): Return @"" when the value
	is nil.

2012-03-05  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSString.m (-rangeOfString:options:range:locale:):
	Correct result range with ICU codepath

2012-03-05  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLElement.m (-addAttribute:): Raise correct exception.
	* Tests/base/NSXMLNode/children.m: Add test cases for attributes.

2012-03-05  Eric Wasylishen  <ewasylishen@gmail.com>

	* Tests/base/NSString/locale.m: Expand test of compare:
	and rangeOfString:. Mark as hopeful for the moment. All pass
	on Mac OS 10.7.

2012-03-04  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLPrivate.h: Move private method declarations for
	NSXMLNode to here.
	* Source/NSXMLDocument.m
	* Source/NSXMLDTD.m
	* Source/NSXMLDTDNode.m
	* Source/NSXMLElement.m
	* Source/NSXMLNode.m: Clean up and add comments about missing code.

2012-03-03  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m: Remove all the extra reference handling code
	and the special retain and release methods.
	* Tests/base/NSXMLNode/basic.m,
	* Tests/base/NSXMLNode/children.m: A few more test
	cases. Validated on MacOSX 10.6.

2012-03-02  Eric Wasylishen  <ewasylishen@gmail.com>

	* Tests/base/NSString/locale.m: Add a simple test for locale sensitive
	compare: and rangeOfString: methods.

2012-03-02  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSString.m: Fix for ICU anchored backwards search

2012-03-02  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSLocale.m (GSDefaultLanguageLocale): Add missing check
	for LC_MESSAGES definition.

2012-03-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: fix for bug #35692

2012-03-02  Richard Frith-Macdonald <rfm@gnu.org>
